# WinFramework

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  ComponentList.txt  DefaultMouseBehavior.cpp  DefaultMouseBehavior.h  Doxyfile  Graphics.sln  LiiArchitecture.drawio  README.md  RefactoringNotes.txt  ScreenSpaceConversion.txt  TODO.txt
libs/ConcurrentQueue/: CMakeLists.txt
libs/stb/: CMakeLists.txt
src/: AddSubject.h  CMakeLists.txt  CoreMediator.cpp  CoreMediator.h  DemoApplication.cpp  DemoApplication.h  DragManager.cpp  DragManager.h  DropAction.cpp  DropAction.h  GenericObj.h  Graphics.vcxproj  Graphics.vcxproj.filters  Main.cpp  Mouse.h  MouseInteractable.h  OnAddHandler.cpp  OnAddHandler.h  TableElement.cpp  TableElement.h  TrackBarBehavior.cpp  TrackBarBehavior.h  TrackbarGraphics.h  VerticalTrackbarBehavior.cpp  VerticalTrackbarBehavior.h
src/Api/: Appearance.h  AsyncRenderCommandHandler.h  Collidable.h  Core.h  Draggable.h  MemoryMovable.h  Mesh.h  MountedSubject.h  MountedSubscriber.h  MouseInteractable.h  Movable.h  PresentationSubject.h  Presenter.h  PresenterSubject.h  PresenterSubscriber.h  RelativeMovement.h  RenderCommander.h  RenderMessageSender.h  RenderProxy.h  RenderingConsumer.h  Resizable.h  Resource.h  ResourceManager.h  Rotatable.h  Scalable.h  Taggable.h  Translatable.h  Viewable.h  Viewport.h  Viewport2.h
src/Behavior/: CoreLifecycleBehavior.cpp  CoreLifecycleBehavior.h  DefaultActivate.cpp  DefaultActivate.h  DefaultComboBoxBehavior.cpp  DefaultComboBoxBehavior.h  DefaultKeyStateBehavior.cpp  DefaultKeyStateBehavior.h  DefaultListBoxBehavior.cpp  DefaultListBoxBehavior.h  DefaultMouseBehavior.h  DefaultMove.cpp  DefaultMove.h  DefaultPropertyParser.cpp  DefaultPropertyParser.h  DefaultRender.cpp  DefaultRender.h  DefaultResize.cpp  DefaultResize.h  DestroySubjectBehavior.cpp  DestroySubjectBehavior.h  RadioButtonBehavior.cpp  RadioButtonBehavior.h  StartSubjectBehavior.cpp  StartSubjectBehavior.h  TextInputBehavior.cpp  TextInputBehavior.h  TickSubjectBehavior.cpp  TickSubjectBehavior.h  UiMoveBehavior.h  VerticalScrollbarBehavior.cpp  VerticalScrollbarBehavior.h  Viewport.cpp  Viewport.h
src/Components/: Adjustable.cpp  Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  Collidable.h  Component.cpp  Component.h  CoreWindow.cpp  CoreWindow.h  CoreWindowFrame.cpp  CoreWindowFrame.h  Draggable.cpp  FileBrowser.cpp  FileBrowser.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  Movable.h  Panel.cpp  Panel.h  PasswordField.cpp  PasswordField.h  RadioButton.cpp  RadioButton.h  Reflectable.cpp  Reflectable.h  ReflectionContainer.cpp  ReflectionContainer.h  Renderable.cpp  Renderable.h  Resizable.cpp  Resizable.h  TextInput.cpp  TextInput.h  TrackBar.cpp  TrackBar.h  UiElement.cpp  UiElement.h  (+8 more)
src/DataTypes/: Buffer.h  CastableTree.cpp  CastableTree.h  CommandCopyOnWriteMap.cpp  CommandCopyOnWriteMap.h  DefaultMultiTree.cpp  DefaultMultiTree.h  ILine.cpp  ILine.h  IRectangle.h  Line.cpp  Line.h  MultiTree.cpp  MultiTree.h  Rectangle.h  Vector2.cpp  Vector2.h  Vector2Int.cpp  Vector2Int.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  ZBufferRegionValidator.cpp  ZBufferRegionValidator.h
src/Enums/: FontAlignment.h  GraphicsScaling.h  Messages.h  RelativeZIndex.h
src/EventInfo/: DestroyEventInfo.cpp  Event.h  EventAttributeInfo.cpp  EventAttributeInfo.h  EventCheckboxStateInfo.cpp  EventCheckboxStateInfo.h  EventComboBoxStateInfo.cpp  EventComboBoxStateInfo.h  EventCoreLifecycleInfo.cpp  EventCoreLifecycleInfo.h  EventCursorLockInfo.cpp  EventCursorLockInfo.h  EventInfo.h  EventKeyStateInfo.cpp  EventKeyStateInfo.h  EventMouseStateInfo.cpp  EventMouseStateInfo.h  EventMoveInfo.cpp  EventMoveInfo.h  EventOnActivateInfo.cpp  EventOnActivateInfo.h  EventOnAddInfo.h  EventOnDragInfo.cpp  EventOnDragInfo.h  EventOnTimerElapsed.cpp  EventOnTimerElapsed.h  EventRadioButtonStateInfo.cpp  EventRadioButtonStateInfo.h  EventRenderingProviderInfo.h  EventResizeInfo.cpp  EventResizeInfo.h  EventUpdateInfo.cpp  EventUpdateInfo.h  RenderEventInfo.cpp  RenderEventInfo.h  RenderObjectEventInfo.cpp  RenderObjectEventInfo.h  Viewport2Event.cpp  Viewport2Event.h  Viewport2EventInfo.h  (+1 more)
src/EventTypes/: DestroyEventInfo.h  EventAttributeInfo.h  EventCheckboxStateInfo.cpp  EventCursorLockInfo.h  EventInfo.cpp  EventInfo.h  EventKeyStateInfo.cpp  EventKeyStateInfo.h  EventMouseStateInfo.cpp  EventMouseStateInfo.h  EventMoveInfo.cpp  EventMoveInfo.h  EventOnDragInfo.cpp  EventRadioButtonStateInfo.h  EventRenderingProviderInfo.cpp  EventResizeInfo.cpp  EventResizeInfo.h  RenderEventInfo.cpp  RenderEventInfo.h  Viewport2Event.cpp
src/Events/: ActivateSubject.h  CheckboxStateSubject.cpp  CheckboxStateSubject.h  CheckboxStateSubscriber.cpp  ComboBoxStateSubject.cpp  ComboBoxStateSubject.h  ComboBoxStateSubscriber.cpp  ComboBoxStateSubscriber.h  DestroySubject.h  DestroySubscriber.h  DragSubject.h  DragSubscriber.h  DropSubject.cpp  DropSubject.h  EntryStateSubject.h  EntryStateSubscriber.h  KeyStateSubject.h  KeyStateSubscriber.cpp  MouseStateSubject.cpp  MouseStateSubject.h  MouseStateSubscriber.cpp  MoveSubject.cpp  OnAddSubscriber.cpp  OnTickSubscriber.h  RadioButtonStateSubscriber.cpp  RadioButtonStateSubscriber.h  RenderObjectEventInfo.cpp  RenderableSubscriber.cpp  RenderableSubscriber.h  ResizeSubject.cpp  ResizeSubscriber.cpp  ResizeSubscriber.h  TimerSubject.cpp  TimerSubscriber.cpp  TimerSubscriber.h  UpdateSubject.cpp
src/GraphicalStates/: CheckboxBehavior.cpp  CheckboxBehavior.h  DefaultButtonBehavior.cpp  DefaultButtonBehavior.h
src/Graphics/: Background.cpp  Background.h  Border.cpp  Border.h  CircleBackground.cpp  CircleBackground.h  CircleBorder.cpp  CircleBorder.h  DefaultRelativeZIndex.cpp  DefaultRelativeZIndex.h  RadioButtonGraphics.cpp  RadioButtonGraphics.h  RelativeZIndex.cpp  RelativeZIndex.h  SimpleBorder.cpp  SimpleBorder.h  TestGraphics.cpp  TestGraphics.h  Text.cpp  Text.h  Text2.cpp  Text2.h  TrackbarGraphics.cpp  TrackbarGraphics.h
src/Managers/: GlobalResourceManager.cpp  GlobalResourceManager.h
src/Materials/: Material.cpp  (+1 more)
(+1788 files in other folders)
